--- a/general.css
+++ b/general.css
@@ -2,4 +2,9 @@ body {
     width: 100%;
     height: 100%;
     min-width: 350px;
+    font-family: 'Spinnaker', sans-serif;
+}
+.stop-scrolling {
+    height: 100%;
+    overflow: hidden;
 }
