--- a/project.css
+++ b/project.css
@@ -1,5 +1,9 @@
 .projects {
     height: 800px;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1500px;
 }
 .projects-grid {
     display: grid;
