--- a/about-me.css
+++ b/about-me.css
@@ -2,6 +2,10 @@
     height: 700px;
     background-color: white;
     font-family: 'Spinnaker', sans-serif;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1500px;
 }
 .projects-header,
 .about-me-header {
