--- a/project.css
+++ b/project.css
@@ -3,19 +3,48 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1500px;
+    max-width: 1300px;
 }
 .projects-grid {
     display: grid;
-    grid-template-columns: 300px 1fr;
-    row-gap: 40px;
+    grid-template-columns: 1fr 1.2fr;
+    row-gap: 80px;
+    column-gap: 40px;
     width: 100%;
     height: 100%;
     padding: 5rem 5rem 5rem 5rem;
 }
 .grid-image {
-    background-color: lightblue;
+    display: flex;
+    align-items: center;
+}
+.project-image {
+    object-fit: cover;
+    width: 100%;
+    border: 2px solid black;
+    border-radius: 2%;
 }
 .grid-description {
-    background-color: lightpink;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.project-title {
+    font-size: 30px;
+}
+.tech-list {
+    display: flex;
+    padding-top: 5px;
+    flex-wrap: wrap;
+    list-style-type: none;
+}
+.tech-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+
+}
+.tech-list-element {
+    padding-left: 10px;
 }
