--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -1,26 +1,42 @@
 .contact {
-    height: 700px;
-    object-fit: cover;
+    height: 400px;
     background-color: black;
     font-family: 'Spinnaker', sans-serif;
-    margin-left: auto;
-    margin-right: auto;
-    color: white;
-    display: flex; /* Add this to make .contact a flex container */
+    color: white; /* Add this to make .contact a flex container */
     justify-content: center; /* Center the content horizontally */
     align-items: center; /* Center the content vertically */
-    /* max-width: 1300px;        */
+}
+.contactBackground {
+    background-color: black;
+    font-family: 'Spinnaker', sans-serif;
+    color: white; /* Add this to make .contact a flex container */
+    justify-content: center; /* Center the content horizontally */
+    align-items: center; /* Center the content vertically */
+    display: grid;
+    position: absolute;
+    z-index: 3;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(20, 1fr);
+    filter: saturate(2);
+    overflow: hidden;
+    width: 100%;
 }
 .contact-container {
     display: flex;
     height: 50%;
+    position: absolute;
+    z-index: 20;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     border-color: white;
-    border-width: 1px;
+    border-width: 2px;
+    border-radius: 20px;
     border-style: solid;
+    background-color: transparent;
     width: 50%;
+    top: 25%;
+    left: 25%;
 }
 .contact-title {
     justify-content: center;
@@ -31,7 +47,7 @@
 }
 .contact-me {
     display: flex;
-    padding-top: 100px;
+    padding-top: 50px;
     flex-direction: row; /* Set flex-direction to row */
     justify-content: center; /* Center the content horizontally */
 }
@@ -39,4 +55,25 @@
     height: 70px;
     padding-right: 40px;
     padding-left: 40px;
+}
+.colorBox {
+    width: 100%;
+    height: 36.5px;
+    z-index: 2;
+    filter: brightness(1.1);
+    transition: 2s ease;
+    position: relative;
+    background: #0a0a0a; /* Set your desired background color */
+    margin: 1px; /* Optional: Add margin for spacing between boxes */
+}
+.colorBox:hover {
+    background: #87cefa;
+    transition-duration: 0s;
+}
+.contact-img {
+    transition: transform 0.2s ease;
+}
+.contact-img:hover {
+    cursor: pointer;
+    transform: translateY(-7px);
 }
