--- a/stylesheets/project.css
+++ b/stylesheets/project.css
@@ -7,9 +7,9 @@
 }
 .projects-grid {
     display: grid;
-    grid-template-columns: 0.8fr 0.8fr;
+    grid-template-columns: 0.8fr 1fr;
     row-gap: 80px;
-    column-gap: 100px;
+    column-gap: 80px;
     width: 100%;
     max-width: 1000px;
     height: 100%;
@@ -32,7 +32,8 @@
 .grid-description {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 .project-title {
     font-size: 30px;
@@ -40,22 +41,34 @@
 .tech-list {
     display: flex;
     padding-top: 5px;
+    padding-bottom: 2px;
     flex-wrap: wrap;
     list-style-type: none;
+    border-radius: 2%;
+    border-bottom-style: solid; 
+    border-color: black;
+    border-width: 2px;
 }
 .tech-text {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 20px;
-
+}
+.project-description-text {
+    padding-top: 30px;
 }
 .tech-list-element {
     padding-left: 10px;
 }
+.tech-list img {
+    max-width: 36px; /* Adjust the size as needed */
+    max-height: 36px; /* Adjust the size as needed */
+}
 
-@media (max-width: 622px) {
+@media (max-width: 750px) {
     .projects-grid {
+        padding-top: 30px;
         display: block;
     }
     .grid-image {
@@ -64,14 +77,34 @@
     }
     .project-image {
         height: 350px;
+        width: 350px;
     }
     .grid-description {
         padding-bottom: 40px;
+    }
+    .projects-header-container {
+        text-align: center;
+    }
+    .projects-header-text {
+        font-size: 40px;
     }
 }
 @media (max-width: 890px) {
     .tech-list img {
         max-width: 24px; /* Adjust the size as needed */
         max-height: 24px; /* Adjust the size as needed */
+    }
+    .project-image {
+        height: 300px;
+        width: 300px;
+    }
+    .project-title {
+        font-size: 25px;
+    }
+    .tech-text {
+        font-size: 20px;
+    }
+    .project-description-text {
+        font-size: 15px;
     }
 }
