--- a/stylesheets/project.css
+++ b/stylesheets/project.css
@@ -21,6 +21,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+}
+.grid-image:hover .hovered {
+    transform: translate(10%, -5%);
+    width: 100%; 
+    height: 100%;
 }
 .project-image {
     object-fit: cover;
@@ -28,6 +34,22 @@
     border-radius: 2%;
     height: 350px;
     width: 350px;
+}
+.overlay {
+    content: "";
+    position: absolute;
+    right: 10%;
+    top: 5%;
+    background-color: rgb(255, 255, 255);
+    height: 100%;
+    width: 110%;
+    z-index: -2;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 2%;
+    border-color: black;
+    transition: transform 0.5s ease, width 0.5s ease, height 0.5s ease;
+    transform: translate(0, 0);
 }
 .grid-description {
     display: flex;
@@ -88,6 +110,15 @@
     .projects-header-text {
         font-size: 40px;
     }
+    .grid-image:hover .hovered {
+        transform: translate(-20%, 5%);
+        width: 40%; 
+        height: 80%;
+    }
+    .overlay {
+        width: 70%;
+        height: 70%;
+    }
 }
 @media (max-width: 890px) {
     .tech-list img {
@@ -106,5 +137,9 @@
     }
     .project-description-text {
         font-size: 15px;
+    }
+    .grid-image::after {
+        height: 100%;
+        width: 100%;
     }
 }
