--- a/stylesheets/project.css
+++ b/stylesheets/project.css
@@ -4,6 +4,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1300px;
+    background-color: white;
 }
 .projects-grid {
     display: grid;
