--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -5,10 +5,12 @@
     display: block;
     height: 50rem;
 }
+
 .header-items {
     max-width: 100%;
     max-height: 100%;
 }
+
 .header-top {
     align-items: center;
     margin: auto;
@@ -16,6 +18,7 @@
     height: 250px;
     background-color: transparent;
 }
+
 .top-line {
     position: absolute;
     margin: auto;
@@ -26,6 +29,7 @@
     height: 250px;
     background-color: transparent;
 }
+
 .top-line:before {
     content: "";
     position: absolute;
@@ -37,6 +41,7 @@
     animation: top-line-animation 0.6s ease-in;
     animation-fill-mode: forwards;
 }
+
 .header-items-background {
     margin: auto;
     left: 0;
@@ -47,6 +52,7 @@
     width: 600px;
     background: radial-gradient(rgb(0, 0, 0, 0.6), transparent);
 }
+
 .header-items-background:before {
     content: "";
     position: absolute;
@@ -59,6 +65,7 @@
     animation: border-top-right 2.5s ease-in;
     animation-fill-mode: forwards;
 }
+
 .header-items-background:after {
     content: "";
     position: absolute;
@@ -71,18 +78,51 @@
     animation: border-bottom-left 2.5s ease-in;
     animation-fill-mode: forwards;
 }
+
 @keyframes border-top-right {
-    0% {width: 0px; height: 0px;}
-    25% {width: 100%; height: 0px;}
-    50% {width: 100%; height: 100%;}
-    100% {width: 100%; height: 100%;}
+    0% {
+        width: 0px;
+        height: 0px;
+    }
+
+    25% {
+        width: 100%;
+        height: 0px;
+    }
+
+    50% {
+        width: 100%;
+        height: 100%;
+    }
+
+    100% {
+        width: 100%;
+        height: 100%;
+    }
 }
+
 @keyframes border-bottom-left {
-    0% {width: 0px; height: 0px;}
-    25% {width: 100%; height: 0px;}
-    50% {width: 100%; height: 100%;}
-    100% {width: 100%; height: 100%;}
+    0% {
+        width: 0px;
+        height: 0px;
+    }
+
+    25% {
+        width: 100%;
+        height: 0px;
+    }
+
+    50% {
+        width: 100%;
+        height: 100%;
+    }
+
+    100% {
+        width: 100%;
+        height: 100%;
+    }
 }
+
 .header-items-content {
     min-width: 100%;
     min-height: 100%;
@@ -91,6 +131,7 @@
     border-color: transparent;
     border-style: solid;
 }
+
 .header-title {
     display: block;
     padding: 4rem 5rem 3rem 6rem;
@@ -98,7 +139,8 @@
     font-family: 'Spinnaker', sans-serif;
     font-size: 50px;
     text-align: center;
-} 
+}
+
 .header-name {
     display: block;
     color: white;
@@ -107,6 +149,7 @@
     text-align: center;
     padding: 1rem 0 3rem 0;
 }
+
 .video-pause {
     position: absolute;
     background-color: transparent;
@@ -119,6 +162,7 @@
     width: 40px;
     align-items: center;
 }
+
 .video-pause-button {
     border-radius: 50%;
     height: 40px;
@@ -130,18 +174,23 @@
     background: radial-gradient(rgb(0, 0, 0, 0.2), transparent);
     transition: border-color 0.5s;
 }
+
 .video-pause-button:hover {
     border-color: white;
+
     .play-image {
         filter: invert(100%);
         transition: filter 0.5s;
     }
+
     .pause-image {
         filter: invert(100%);
         transition: filter 0.5s;
     }
+
     transition: border-color 0.5s;
 }
+
 .play-image {
     position: absolute;
     z-index: 5;
@@ -154,6 +203,7 @@
     filter: invert(60%);
     transition: filter 0.5s;
 }
+
 .pause-image {
     position: absolute;
     z-index: 6;
@@ -166,9 +216,11 @@
     filter: invert(60%);
     transition: filter 0.5s;
 }
+
 .image-hide {
     visibility: hidden;
 }
+
 .header-bottom {
     align-items: center;
     margin: auto;
@@ -177,6 +229,7 @@
     z-index: 100;
     background-color: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, white 100%);
 }
+
 .bottom-line {
     position: absolute;
     margin: auto;
@@ -187,6 +240,7 @@
     height: 230px;
     background-color: transparent;
 }
+
 .bottom-line:before {
     content: "";
     position: absolute;
@@ -198,7 +252,9 @@
     animation: bottom-line-animation 0.6s ease-in 0.6s;
     animation-fill-mode: forwards;
 }
+
 #myVideo {
+    pointer-events: none;
     position: absolute;
     object-fit: cover;
     top: 0;
@@ -221,43 +277,92 @@
     .header-title {
         font-size: 40px;
     }
+
     .header-name {
         font-size: 25px;
     }
+
     .header-items-background {
         width: 100%;
         height: 297px;
     }
-    .header-items-content{
+
+    .header-items-content {
         height: 332px;
     }
+
     .header-items-background:before,
     .header-items-background:after {
         border-style: none;
     }
+
     .video-pause {
         left: 0;
         right: 0;
         bottom: 20px;
     }
+
     @keyframes border-top-right {
-        0% {width: 0px; height: 0px;}
+        0% {
+            width: 0px;
+            height: 0px;
+        }
     }
+
     @keyframes border-bottom-left {
-        0% {width: 0px; height: 0px;}
+        0% {
+            width: 0px;
+            height: 0px;
+        }
     }
+
     @keyframes top-line-animation {
-        0% {height: 0; width: 1px;}
-        20% {height: 50px; width: 1px;}
-        40% {height: 100px; width: 1px;}
-        60% {height: 150px; width: 1px;}    
-        80% {height: 200px; width: 1px;}
-        100% {height: 250px; width: 1px;}
+        0% {
+            height: 0;
+            width: 1px;
+        }
+
+        20% {
+            height: 50px;
+            width: 1px;
+        }
+
+        40% {
+            height: 100px;
+            width: 1px;
+        }
+
+        60% {
+            height: 150px;
+            width: 1px;
+        }
+
+        80% {
+            height: 200px;
+            width: 1px;
+        }
+
+        100% {
+            height: 250px;
+            width: 1px;
+        }
     }
+
     @keyframes bottom-line-animation {
-        0% {height: 40px; width: 1px;}
-        50% {height: 100px; width: 1px;}   
-        100% {height: 180px; width: 1px;}
+        0% {
+            height: 40px;
+            width: 1px;
+        }
+
+        50% {
+            height: 100px;
+            width: 1px;
+        }
+
+        100% {
+            height: 180px;
+            width: 1px;
+        }
     }
 }
 
@@ -266,33 +371,79 @@
         width: 100%;
         height: 332px;
     }
+
     .header-items-background:before,
     .header-items-background:after {
         border-style: none;
     }
+
     .video-pause {
         left: 0;
         right: 0;
         bottom: 20px;
     }
+
     @keyframes border-top-right {
-        0% {width: 0px; height: 0px;}
+        0% {
+            width: 0px;
+            height: 0px;
+        }
     }
+
     @keyframes border-bottom-left {
-        0% {width: 0px; height: 0px;}
+        0% {
+            width: 0px;
+            height: 0px;
+        }
     }
+
     @keyframes top-line-animation {
-        0% {height: 0; width: 1px;}
-        20% {height: 50px; width: 1px;}
-        40% {height: 100px; width: 1px;}
-        60% {height: 150px; width: 1px;}    
-        80% {height: 200px; width: 1px;}
-        100% {height: 250px; width: 1px;}
+        0% {
+            height: 0;
+            width: 1px;
+        }
+
+        20% {
+            height: 50px;
+            width: 1px;
+        }
+
+        40% {
+            height: 100px;
+            width: 1px;
+        }
+
+        60% {
+            height: 150px;
+            width: 1px;
+        }
+
+        80% {
+            height: 200px;
+            width: 1px;
+        }
+
+        100% {
+            height: 250px;
+            width: 1px;
+        }
     }
+
     @keyframes bottom-line-animation {
-        0% {height: 40px; width: 1px;}
-        50% {height: 100px; width: 1px;}   
-        100% {height: 140px; width: 1px;}
+        0% {
+            height: 40px;
+            width: 1px;
+        }
+
+        50% {
+            height: 100px;
+            width: 1px;
+        }
+
+        100% {
+            height: 140px;
+            width: 1px;
+        }
     }
 }
 
@@ -300,9 +451,11 @@
     .header-title {
         font-size: 90px;
     }
+
     .header-name {
         font-size: 50px;
     }
+
     .header-items-background {
         width: 1000px;
         height: 344px;
