--- a/stylesheets/fsnav.css
+++ b/stylesheets/fsnav.css
@@ -110,7 +110,7 @@
   display: flex;
   height: 100%;
   flex-direction: column;
-  width: 20%;
+  width: 30%;
   padding: 4rem 3rem 3rem 3rem;
   float: left;
   overflow-y: scroll;
@@ -148,6 +148,7 @@
   display: flex;
   width: 70%;
   position: relative;
+  pointer-events: none;
 }
 .more-content-container {
   background-color: lightblue;
@@ -168,6 +169,7 @@
   border-top-width: 1px;
   border-top-style: solid;
   border-top-color: rgb(222, 222, 222);
+  z-index: 4;
 }
 .fsnav-lower-menu-text {
   margin-right: 20px;
@@ -228,5 +230,5 @@
       transparent 100%,
       rgba(0, 0, 0, 1)
     );
-  z-index: 100;
+  z-index: 2;
 }
