--- a/stylesheets/about-me.css
+++ b/stylesheets/about-me.css
@@ -1,249 +1,249 @@
 .about-me {
-    height: 700px;
-    background-color: radial-gradient(rgb(0, 0, 0, 0.6), white);;
+  height: 700px;
+  background-color: radial-gradient(rgb(0, 0, 0, 0.6), white);
 
-    font-family: 'Spinnaker', sans-serif;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1300px;
+  font-family: "Spinnaker", sans-serif;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1300px;
 }
 .projects-header,
 .about-me-header {
-    width: 100%;
-    padding: 3rem 5rem 0rem 5rem;
+  width: 100%;
+  padding: 3rem 5rem 0rem 5rem;
 }
 .projects-header-container,
 .about-me-header-container {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    z-index: auto;
-    border-bottom-style: solid;
-    border-width: 2px;
-    border-radius: 2%;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: auto;
+  border-bottom-style: solid;
+  border-width: 2px;
+  border-radius: 2%;
 }
 .projects-header-text,
 .about-me-header-text {
-    display: inline-block;
-    font-size: 50px;
+  display: inline-block;
+  font-size: 50px;
 }
 .about-main-container {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 4rem 4rem 4rem 4rem;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 4rem 4rem 4rem 4rem;
 }
 .about-left-section {
-    width: 50%;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 0;
+  width: 50%;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 0;
 }
 .about-left-section::before {
-    content: "";
-    position: absolute;
-    align-items: center;
-    left: 0;
-    top: 0;
-    z-index: -1;
-    background-color: rgb(255, 255, 255);
-    height: 100%;
-    width: 100%;
-    border-style: solid;
-    border-radius: 2%;
-    border-width: 2px;
+  content: "";
+  position: absolute;
+  align-items: center;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  background-color: rgb(255, 255, 255);
+  height: 100%;
+  width: 100%;
+  border-style: solid;
+  border-radius: 2%;
+  border-width: 2px;
 }
 .about-left-section-overlay {
-    content: "";
-    position: absolute;
-    align-items: center;
-    left: 5%;
-    top: 10%;
-    z-index: -2;
-    background-color: rgb(0, 132, 255);
-    height: 100%;
-    width: 100%;
-    border-style: solid;
-    border-radius: 2%;
-    border-width: 2px;
-    transition: transform 0.5s ease;
-    transform: translate(0, 0);
+  content: "";
+  position: absolute;
+  align-items: center;
+  left: 5%;
+  top: 10%;
+  z-index: -2;
+  background-color: rgb(0, 132, 255);
+  height: 100%;
+  width: 100%;
+  border-style: solid;
+  border-radius: 2%;
+  border-width: 2px;
+  transition: transform 0.5s ease;
+  transform: translate(0, 0);
 }
 .about-left-section-overlay .overlay-transition {
-    transform: translate(-5%, -10%);
-    background-color: black;
+  transform: translate(-5%, -10%);
+  background-color: black;
 }
 .about-me-my-name {
-    padding-top: 4rem;
-    padding-bottom: 1rem;
-    font-size: 30px;
+  padding-top: 4rem;
+  padding-bottom: 1rem;
+  font-size: 30px;
 }
 .about-me-name {
-    font-size: 50px;
-    color: rgb(4, 104, 217);
-    font-weight: bold;
-    padding-bottom: 2rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+  font-size: 50px;
+  color: rgb(4, 104, 217);
+  font-weight: bold;
+  padding-bottom: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .about-me-description {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-    text-align: center;
-    font-size: 20px;
-    padding-bottom: 4rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  text-align: center;
+  font-size: 20px;
+  padding-bottom: 4rem;
 }
 .tufts-link {
-    color: rgb(4, 104, 217);
-    font-weight: bold;
-    text-align: center;
-    justify-content: center;
+  color: rgb(4, 104, 217);
+  font-weight: bold;
+  text-align: center;
+  justify-content: center;
 }
 .about-right-section {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .about-image-container {
-    height: 450px;
-    position: relative;
-    z-index: 0;
+  height: 400px;
+  position: relative;
+  z-index: 0;
 }
 .about-image {
-    width: 300px;
-    border-radius: 2%;
-    border-style: solid;
-    border-width: 2px;
+  width: 300px;
+  border-radius: 2%;
+  border-style: solid;
+  border-width: 2px;
 }
 .about-image-container::after {
-    content: "";
-    position: absolute;
-    left: 15%;
-    top: 5%;
-    background-color: rgb(255, 255, 255);
-    height: 100%;
-    width: 100%;
-    z-index: -2;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 2%;
+  content: "";
+  position: absolute;
+  left: 20%;
+  top: 5%;
+  background-color: rgb(255, 255, 255);
+  height: 100%;
+  width: 100%;
+  z-index: -2;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 2%;
 }
 @media (max-width: 1100px) {
-    .about-me {
-        height: 550px;
-    }
-    .about-me-my-name {
+  .about-me {
+    height: 550px;
+  }
+  .about-me-my-name {
     font-size: 20px;
-    }
-    .about-me-name {
+  }
+  .about-me-name {
     font-size: 40px;
-    }
-    .about-me-description {
+  }
+  .about-me-description {
     font-size: 15px;
-    }
-    .about-image {
+  }
+  .about-image {
     width: 225px;
-    }
-    .about-image-container {
+  }
+  .about-image-container {
     height: 336px;
-    }
-    .about-image-container::after {
+  }
+  .about-image-container::after {
     left: 7%;
     top: 7%;
-    }
+  }
 }
 .hidden {
-    opacity: 0;
-    transform: translateY(-10%);
-    transition: all 1s;
+  opacity: 0;
+  transform: translateY(-10%);
+  transition: all 1s;
 }
 .show {
-    opacity: 1;
-    transform: translateY(0);
+  opacity: 1;
+  transform: translateY(0);
 }
 @media (prefers-reduced-motion: no-preference) {
-    .hidden {
-        transition: all 1s;
-    }
+  .hidden {
+    transition: all 1s;
+  }
 }
 @media (max-width: 770px) {
-    .about-me-my-name {
-        font-size: 15px;
-    }
-    .about-me-name {
-        font-size: 25px;
-    }
-    .about-me-description {
-        font-size: 12.5px;  
-    }
-    .about-image-container {
-        padding-left: 20px;
-    }
-    .about-image-container::after {
-        left: 25%;
-        top: 5%;
-        width: 200px;
-    }
+  .about-me-my-name {
+    font-size: 15px;
+  }
+  .about-me-name {
+    font-size: 25px;
+  }
+  .about-me-description {
+    font-size: 12.5px;
+  }
+  .about-image-container {
+    padding-left: 20px;
+  }
+  .about-image-container::after {
+    left: 25%;
+    top: 5%;
+    width: 200px;
+  }
 }
 @media (max-width: 622px) {
-    .about-me {
-        height: 800px;
-    }
-    .about-main-container {
-        display: block;
-        margin: 4rem 2rem 2rem 2rem;
-    }
-    .about-left-section {
-        display: block;
-        width: 100%;
-        text-align: center;
-        min-width: 300px;
-    }
-    .about-right-section {
-        display: block;
-        width: 100%;
-        padding-top: 5rem;
-        text-align: center;
-    }
-    .about-left-section::after {
-        left: 2%;
-        top: 5%;
-    }
-    .about-me-my-name {
-        font-size: 20px;
-    }
-    .about-me-name {
-        font-size: 35px;
-    }
-    .about-me-description {
-        font-size: 15px;
-    }  
-    .about-me-header-text {
-        font-size: 40px;
-    }
-    .about-image-container {
-        display: block;
-        padding-left: 0;
-    }
-    .about-image {
-        width: 175px;
-    }
-    .about-image-container::after {
-        height: 261px;
-        width: 150px;
-        left: 40%;
-        top: 5%;
-    }
-    .about-me-header-container {
-        text-align: center;
-    }
+  .about-me {
+    height: 800px;
+  }
+  .about-main-container {
+    display: block;
+    margin: 4rem 2rem 2rem 2rem;
+  }
+  .about-left-section {
+    display: block;
+    width: 100%;
+    text-align: center;
+    min-width: 300px;
+  }
+  .about-right-section {
+    display: block;
+    width: 100%;
+    padding-top: 5rem;
+    text-align: center;
+  }
+  .about-left-section::after {
+    left: 2%;
+    top: 5%;
+  }
+  .about-me-my-name {
+    font-size: 20px;
+  }
+  .about-me-name {
+    font-size: 35px;
+  }
+  .about-me-description {
+    font-size: 15px;
+  }
+  .about-me-header-text {
+    font-size: 40px;
+  }
+  .about-image-container {
+    display: block;
+    padding-left: 0;
+  }
+  .about-image {
+    width: 175px;
+  }
+  .about-image-container::after {
+    height: 220px;
+    width: 150px;
+    left: 40%;
+    top: 5%;
+  }
+  .about-me-header-container {
+    text-align: center;
+  }
 }
