--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -11,6 +11,32 @@
   max-height: 100%;
 }
 
+.header-items::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* Ensure the pseudo-element does not interfere with mouse events */
+
+  background: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 1),
+      transparent 0%,
+      transparent 100%,
+      rgba(0, 0, 0, 1)
+    ),
+    linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 1),
+      transparent 0%,
+      transparent 90%,
+      rgba(0, 0, 0, 0.9)
+    );
+  z-index: 2;
+}
+
 .header-top {
   align-items: center;
   margin: auto;
@@ -155,7 +181,7 @@
   background-color: transparent;
   margin: auto;
   right: 25px;
-  bottom: 25px;
+  bottom: 40px;
   z-index: auto;
   border-radius: 50%;
   height: 40px;
@@ -255,6 +281,10 @@
   background-color: white;
   animation: bottom-line-animation 0.6s ease-in 0.6s;
   animation-fill-mode: forwards;
+}
+.transition-bar {
+  height: 200px;
+  background-color: black;
 }
 
 #myVideo {
