--- a/stylesheets/fsnav.css
+++ b/stylesheets/fsnav.css
@@ -1,3 +1,9 @@
+/**
+ * @Author: Your name
+ * @Date:   2023-11-23 15:54:57
+ * @Last Modified by:   Your name
+ * @Last Modified time: 2024-09-14 10:39:34
+ */
 *,
 *,
 ::before,
@@ -231,4 +237,20 @@
       rgba(0, 0, 0, 1)
     );
   z-index: 2;
+}
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+#preloader.hidden {
+  display: none;
 }
